include options car, pets

--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	<input type="radio" name="gender">Male<br>
 	<input type="radio" name="gender">Female<br>
 	<input type="radio" name="gender">Other<br>
+	Pets: <br>
+	<input type="checkbox" name="">Cats<br>
+	<input type="checkbox" name="">Dogs<br>
+	Cars: <br>
+	<select name="cars">
+		<option value="BMW">BMW</option>
+		<option value="Ford">Ford</option>
+		<option value="KIA">KIA</option>
+	</select> <br>
+
 	<input type="submit" value="Register!">
 	<input type="reset" name="">
 
